<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <ImageView android:id="@+id/appicon"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:contentDescription="@string/iconViewDesc"
        android:src="@drawable/ic_launcher"/>
    
    <ImageButton
        android:id="@+id/btndel"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:contentDescription="@string/btndelDesc"
        android:src="@android:drawable/ic_menu_delete" />

    <ImageButton
        android:id="@+id/btnrev"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:contentDescription="@string/btnrevDesc"
        android:src="@android:drawable/ic_menu_revert" />

</LinearLayout>