<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/interval_group"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="5dip"
    android:paddingLeft="10dip"
    android:paddingRight="10dip"
    android:paddingTop="5dip" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:paddingTop="20dip"
        android:text="@string/settings_interval_title"
        android:textColor="#FF33B5E5"
        android:textSize="12dip" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:paddingLeft="0dip"
        android:paddingRight="0dip"
        android:src="@drawable/solid_holo_blue" />

    <!-- Interval 15 Minutes -->

    <RadioButton
        android:id="@+id/interval_15min"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:text="@string/settings_interval_15min"
        android:textSize="25dip" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:src="@drawable/separator" />

    <!-- Interval 30 Minutes -->

    <RadioButton
        android:id="@+id/interval_halfhour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:text="@string/settings_interval_halfhour"
        android:textSize="25dip" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:src="@drawable/separator" />

    <!-- Interval 1 Hour -->

    <RadioButton
        android:id="@+id/interval_1hour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:text="@string/settings_interval_1hour"
        android:textSize="25dip" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:src="@drawable/separator" />

    <!-- Interval Twice a day -->

    <RadioButton
        android:id="@+id/interval_halfday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:text="@string/settings_interval_halfday"
        android:textSize="25dip" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:src="@drawable/separator" />

    <!-- Interval Once a day -->

    <RadioButton
        android:id="@+id/interval_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:text="@string/settings_interval_day"
        android:textSize="25dip" />

</RadioGroup>