<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical" >
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="50dip"
        android:orientation="horizontal">
        
        <TextView android:layout_width="0dip"
            android:paddingLeft="5dip"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:layout_height="match_parent"
            android:text="@string/dialog_add_title"
            android:textColor="#FF33B5E5"/>
        
        <ImageButton android:id="@+id/btn_cancel_transaction"
            android:src="@android:drawable/ic_menu_revert"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:background="@drawable/transparent_button"
            android:contentDescription="@string/description_cancel_tag_transaction"/>
        
        <ImageButton android:id="@+id/btn_save_changes"
            android:src="@android:drawable/ic_menu_save"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:background="@drawable/transparent_button"
            android:contentDescription="@string/description_commit_tag_transaction"/>
    </LinearLayout>
    
    <ImageView android:src="@drawable/solid_holo_blue"
        android:layout_height="1dip"
        android:layout_width="match_parent"/>
    
    <ListView android:id="@+id/dialog_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>